Assignment5/y.output
Terminals unused in grammar

   EAN
   STRUCT
   TYPEDEF
   UNION
   SINGLE_LINE_COMMENT
   MULTI_LINE_COMMENT
   DIGIT
   IDENTIFIER_NONDIGIT
   NONZERO_DIGIT
   NONZERO_INTEGER_CONSTANT
   CONSTANT
   DIGIT_SEQUENCE
   SIGN
   EXPONENT_PART
   FRACTIONAL_CONSTANT
   ESCAPE_SEQUENCE
   C_CHAR
   C_CHAR_SEQUENCE
   S_CHAR
   S_CHAR_SEQUENCE
   HASH
   THEN


State 190 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | STRING_LITERAL
    4                   | ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE

    5 argument_expression_list_opt: argument_expression_list
    6                             | %empty

    7 argument_expression_list: assignment_expression
    8                         | argument_expression_list COMMA assignment_expression

    9 unary_operator: AMP
   10               | MUL
   11               | ADD
   12               | SUB
   13               | NEG
   14               | EXCLAIM

   15 multiplicative_expression: cast_expression
   16                          | multiplicative_expression MUL cast_expression
   17                          | multiplicative_expression DIV cast_expression
   18                          | multiplicative_expression MODULO cast_expression

   19 shift_expression: additive_expression
   20                 | shift_expression SHL additive_expression
   21                 | shift_expression SHR additive_expression

   22 equality_expression: relational_expression
   23                    | equality_expression EQ relational_expression
   24                    | equality_expression NEQ relational_expression

   25 exclusive_OR_expression: AND_expression
   26                        | exclusive_OR_expression BITXOR AND_expression

   27 logical_AND_expression: inclusive_OR_expression
   28                       | logical_AND_expression AND inclusive_OR_expression

   29 conditional_expression: logical_OR_expression
   30                       | logical_OR_expression QUESTION expression COLON conditional_expression

   31 assignment_operator: ASSIGN
   32                    | STAREQ
   33                    | DIVEQ
   34                    | MODEQ
   35                    | PLUSEQ
   36                    | MINUSEQ
   37                    | SHLEQ
   38                    | SHREQ
   39                    | BINANDEQ
   40                    | BINXOREQ
   41                    | BINOREQ

   42 constant_expression: conditional_expression

   43 init_declarator_list_opt: init_declarator_list
   44                         | %empty

   45 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   46                       | type_specifier declaration_specifiers_opt
   47                       | type_qualifier declaration_specifiers_opt
   48                       | function_specifier declaration_specifiers_opt

   49 init_declarator: declarator
   50                | declarator ASSIGN initializer

   51 type_specifier: VOID
   52               | CHAR
   53               | SHORT
   54               | INT
   55               | LONG
   56               | FLOAT
   57               | DOUBLE
   58               | SIGNED
   59               | UNSIGNED
   60               | _BOOLEAN
   61               | _COMPLEX
   62               | _IMAGINARY
   63               | enum_specifier

   64 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
   65                         | type_qualifier specifier_qualifier_list_opt

   66 enum_specifier: ENUM identifier_opt CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
   67               | ENUM identifier_opt CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE
   68               | ENUM IDENTIFIER

   69 enumerator: IDENTIFIER
   70           | IDENTIFIER ASSIGN constant_expression

   71 function_specifier: INLINE

   72 declarator: pointer_opt direct_declarator

   73 assignment_expression_opt: assignment_expression
   74                          | %empty

   75 pointer: MUL type_qualifier_list_opt
   76        | MUL type_qualifier_list_opt pointer

   77 parameter_type_list: parameter_list
   78                    | parameter_list COMMA DOTS

   79 parameter_declaration: declaration_specifiers declarator
   80                      | declaration_specifiers

   81 type_name: specifier_qualifier_list

   82 designation_opt: designation
   83                | %empty

   84 designation: designator_list ASSIGN

   85 designator: SQUARE_BRACKET_OPEN constant_expression SQUARE_BRACKET_CLOSE
   86           | DOT IDENTIFIER

   87 labeled_statement: IDENTIFIER COLON statement
   88                  | CASE constant_expression COLON statement
   89                  | DEFAULT COLON statement

   90 compound_statement: CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE

   91 block_item: declaration
   92           | statement

   93 expression_statement: expression_opt SEMICOLON

   94 selection_statement: selection_statement_base
   95                    | selection_statement_base ELSE statement
   96                    | SWITCH ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE statement

   97 jump_statement: GOTO IDENTIFIER SEMICOLON
   98               | CONTINUE SEMICOLON
   99               | BREAK SEMICOLON
  100               | RETURN expression_opt SEMICOLON

  101 external_declaration: function_definition
  102                     | declaration

  103 function_definition: declaration_specifiers declarator declaration_list_opt compound_statement

  104 declaration_list: declaration
  105                 | declaration_list declaration

  106 declaration_list_opt: declaration_list
  107                     | %empty

  108 translation_unit: external_declaration
  109                 | translation_unit external_declaration

  110 iteration_statement: WHILE ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE statement
  111                    | DO statement WHILE ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE SEMICOLON
  112                    | FOR ROUND_BRACKET_OPEN expression_opt SEMICOLON expression_opt SEMICOLON expression_opt ROUND_BRACKET_CLOSE statement
  113                    | FOR ROUND_BRACKET_OPEN declaration expression_opt SEMICOLON expression_opt ROUND_BRACKET_CLOSE statement

  114 selection_statement_base: IF ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE statement

  115 expression_opt: expression
  116               | %empty

  117 block_item_list: block_item
  118                | block_item_list block_item

  119 block_item_list_opt: block_item_list
  120                    | %empty

  121 statement: labeled_statement
  122          | compound_statement
  123          | expression_statement
  124          | selection_statement
  125          | iteration_statement
  126          | jump_statement

  127 designator_list: designator
  128                | designator_list designator

  129 initializer_list: designation_opt initializer
  130                 | initializer_list COMMA designation_opt initializer

  131 initializer: assignment_expression
  132            | CURLY_BRACKET_OPEN initializer_list CURLY_BRACKET_CLOSE
  133            | CURLY_BRACKET_OPEN initializer_list COMMA CURLY_BRACKET_CLOSE

  134 identifier_list: IDENTIFIER
  135                | identifier_list COMMA IDENTIFIER

  136 parameter_list: parameter_declaration
  137               | parameter_list COMMA parameter_declaration

  138 type_qualifier_list: type_qualifier
  139                    | type_qualifier_list type_qualifier

  140 direct_declarator: IDENTIFIER
  141                  | ROUND_BRACKET_OPEN declarator ROUND_BRACKET_CLOSE
  142                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list_opt assignment_expression_opt SQUARE_BRACKET_CLOSE
  143                  | direct_declarator SQUARE_BRACKET_OPEN STATIC type_qualifier_list_opt assignment_expression SQUARE_BRACKET_CLOSE
  144                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list_opt MUL SQUARE_BRACKET_CLOSE
  145                  | direct_declarator ROUND_BRACKET_OPEN parameter_type_list ROUND_BRACKET_CLOSE
  146                  | direct_declarator ROUND_BRACKET_OPEN identifier_list ROUND_BRACKET_CLOSE
  147                  | direct_declarator ROUND_BRACKET_OPEN ROUND_BRACKET_CLOSE

  148 type_qualifier_list_opt: type_qualifier_list
  149                        | %empty

  150 pointer_opt: pointer
  151            | %empty

  152 type_qualifier: CONST
  153               | RESTRICT
  154               | VOLATILE

  155 enumerator_list: enumerator
  156                | enumerator_list COMMA enumerator

  157 identifier_opt: IDENTIFIER
  158               | %empty

  159 specifier_qualifier_list_opt: specifier_qualifier_list
  160                             | %empty

  161 storage_class_specifier: EXTERN
  162                        | STATIC
  163                        | AUTO
  164                        | REGISTER

  165 init_declarator_list: init_declarator
  166                     | init_declarator_list COMMA init_declarator

  167 declaration_specifiers_opt: declaration_specifiers
  168                           | %empty

  169 declaration: declaration_specifiers init_declarator_list_opt SEMICOLON

  170 expression: assignment_expression
  171           | expression COMMA assignment_expression

  172 assignment_expression: conditional_expression
  173                      | unary_expression assignment_operator assignment_expression

  174 logical_OR_expression: logical_AND_expression
  175                      | logical_OR_expression OR logical_AND_expression

  176 inclusive_OR_expression: exclusive_OR_expression
  177                        | inclusive_OR_expression BITOR exclusive_OR_expression

  178 AND_expression: equality_expression
  179               | AND_expression AMP equality_expression

  180 relational_expression: shift_expression
  181                      | relational_expression BITSHL shift_expression
  182                      | relational_expression BITSHR shift_expression
  183                      | relational_expression LTE shift_expression
  184                      | relational_expression GTE shift_expression

  185 additive_expression: multiplicative_expression
  186                    | additive_expression ADD multiplicative_expression
  187                    | additive_expression SUB multiplicative_expression

  188 cast_expression: unary_expression
  189                | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE cast_expression

  190 unary_expression: postfix_expression
  191                 | INC unary_expression
  192                 | DEC unary_expression
  193                 | unary_operator cast_expression
  194                 | SIZEOF unary_expression
  195                 | SIZEOF ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE

  196 postfix_expression: primary_expression
  197                   | postfix_expression SQUARE_BRACKET_OPEN expression SQUARE_BRACKET_CLOSE
  198                   | postfix_expression ROUND_BRACKET_OPEN argument_expression_list_opt ROUND_BRACKET_CLOSE
  199                   | postfix_expression DOT IDENTIFIER
  200                   | postfix_expression ACC IDENTIFIER
  201                   | postfix_expression INC
  202                   | postfix_expression DEC
  203                   | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE CURLY_BRACKET_OPEN initializer_list CURLY_BRACKET_CLOSE
  204                   | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE CURLY_BRACKET_OPEN initializer_list COMMA CURLY_BRACKET_CLOSE

  205 constant: INTEGER_CONSTANT
  206         | FLOATING_CONSTANT
  207         | ENUMERATION_CONSTANT
  208         | CHARACTER_CONSTANT


Terminals, with rules where they appear

$end (0) 0
error (256)
AUTO (258) 163
ENUM (259) 66 67 68
RESTRICT (260) 153
UNSIGNED (261) 59
BREAK (262) 99
EXTERN (263) 161
RETURN (264) 100
VOID (265) 51
CASE (266) 88
FLOAT (267) 56
SHORT (268) 53
VOLATILE (269) 154
CHAR (270) 52
FOR (271) 112 113
SIGNED (272) 58
WHILE (273) 110 111
CONST (274) 152
GOTO (275) 97
SIZEOF (276) 194 195
_BOOLEAN (277) 60
EAN (278)
CONTINUE (279) 98
IF (280) 114
STATIC (281) 143 162
_COMPLEX (282) 61
DEFAULT (283) 89
INLINE (284) 71
STRUCT (285)
_IMAGINARY (286) 62
DO (287) 111
INT (288) 54
SWITCH (289) 96
DOUBLE (290) 57
LONG (291) 55
TYPEDEF (292)
ELSE (293) 95
REGISTER (294) 164
UNION (295)
SINGLE_LINE_COMMENT (296)
MULTI_LINE_COMMENT (297)
DIGIT (298)
IDENTIFIER_NONDIGIT (299)
IDENTIFIER (300) 1 68 69 70 86 87 97 134 135 140 157 199 200
NONZERO_DIGIT (301)
NONZERO_INTEGER_CONSTANT (302)
INTEGER_CONSTANT (303) 205
CONSTANT (304)
DIGIT_SEQUENCE (305)
SIGN (306)
EXPONENT_PART (307)
FRACTIONAL_CONSTANT (308)
FLOATING_CONSTANT (309) 206
ENUMERATION_CONSTANT (310) 207
ESCAPE_SEQUENCE (311)
C_CHAR (312)
C_CHAR_SEQUENCE (313)
CHARACTER_CONSTANT (314) 208
S_CHAR (315)
S_CHAR_SEQUENCE (316)
STRING_LITERAL (317) 3
SQUARE_BRACKET_OPEN (318) 85 142 143 144 197
SQUARE_BRACKET_CLOSE (319) 85 142 143 144 197
ROUND_BRACKET_OPEN (320) 4 96 110 111 112 113 114 141 145 146 147 189
    195 198 203 204
ROUND_BRACKET_CLOSE (321) 4 96 110 111 112 113 114 141 145 146 147
    189 195 198 203 204
CURLY_BRACKET_OPEN (322) 66 67 90 132 133 203 204
CURLY_BRACKET_CLOSE (323) 66 67 90 132 133 203 204
DOT (324) 86 199
ACC (325) 200
INC (326) 191 201
DEC (327) 192 202
AMP (328) 9 179
MUL (329) 10 16 75 76 144
ADD (330) 11 186
SUB (331) 12 187
NEG (332) 13
EXCLAIM (333) 14
DIV (334) 17
MODULO (335) 18
SHL (336) 20
SHR (337) 21
BITSHL (338) 181
BITSHR (339) 182
LTE (340) 183
GTE (341) 184
EQ (342) 23
NEQ (343) 24
AND (344) 28
OR (345) 175
QUESTION (346) 30
COLON (347) 30 87 88 89
SEMICOLON (348) 93 97 98 99 100 111 112 113 169
DOTS (349) 78
ASSIGN (350) 31 50 70 84
STAREQ (351) 32
DIVEQ (352) 33
MODEQ (353) 34
PLUSEQ (354) 35
MINUSEQ (355) 36
SHLEQ (356) 37
SHREQ (357) 38
BINANDEQ (358) 39
BINXOREQ (359) 40
BINOREQ (360) 41
COMMA (361) 8 67 78 130 133 135 137 156 166 171 204
HASH (362)
BITXOR (363) 26
BITOR (364) 177
THEN (365)


Nonterminals, with rules where they appear

$accept (111)
    on left: 0
primary_expression (112)
    on left: 1 2 3 4, on right: 196
argument_expression_list_opt (113)
    on left: 5 6, on right: 198
argument_expression_list (114)
    on left: 7 8, on right: 5 8
unary_operator (115)
    on left: 9 10 11 12 13 14, on right: 193
multiplicative_expression (116)
    on left: 15 16 17 18, on right: 16 17 18 185 186 187
shift_expression (117)
    on left: 19 20 21, on right: 20 21 180 181 182 183 184
equality_expression (118)
    on left: 22 23 24, on right: 23 24 178 179
exclusive_OR_expression (119)
    on left: 25 26, on right: 26 176 177
logical_AND_expression (120)
    on left: 27 28, on right: 28 174 175
conditional_expression (121)
    on left: 29 30, on right: 30 42 172
assignment_operator (122)
    on left: 31 32 33 34 35 36 37 38 39 40 41, on right: 173
constant_expression (123)
    on left: 42, on right: 70 85 88
init_declarator_list_opt (124)
    on left: 43 44, on right: 169
declaration_specifiers (125)
    on left: 45 46 47 48, on right: 79 80 103 167 169
init_declarator (126)
    on left: 49 50, on right: 165 166
type_specifier (127)
    on left: 51 52 53 54 55 56 57 58 59 60 61 62 63, on right: 46 64
specifier_qualifier_list (128)
    on left: 64 65, on right: 81 159
enum_specifier (129)
    on left: 66 67 68, on right: 63
enumerator (130)
    on left: 69 70, on right: 155 156
function_specifier (131)
    on left: 71, on right: 48
declarator (132)
    on left: 72, on right: 49 50 79 103 141
assignment_expression_opt (133)
    on left: 73 74, on right: 142
pointer (134)
    on left: 75 76, on right: 76 150
parameter_type_list (135)
    on left: 77 78, on right: 145
parameter_declaration (136)
    on left: 79 80, on right: 136 137
type_name (137)
    on left: 81, on right: 189 195 203 204
designation_opt (138)
    on left: 82 83, on right: 129 130
designation (139)
    on left: 84, on right: 82
designator (140)
    on left: 85 86, on right: 127 128
labeled_statement (141)
    on left: 87 88 89, on right: 121
compound_statement (142)
    on left: 90, on right: 103 122
block_item (143)
    on left: 91 92, on right: 117 118
expression_statement (144)
    on left: 93, on right: 123
selection_statement (145)
    on left: 94 95 96, on right: 124
jump_statement (146)
    on left: 97 98 99 100, on right: 126
external_declaration (147)
    on left: 101 102, on right: 108 109
function_definition (148)
    on left: 103, on right: 101
declaration_list (149)
    on left: 104 105, on right: 105 106
declaration_list_opt (150)
    on left: 106 107, on right: 103
translation_unit (151)
    on left: 108 109, on right: 0 109
iteration_statement (152)
    on left: 110 111 112 113, on right: 125
selection_statement_base (153)
    on left: 114, on right: 94 95
expression_opt (154)
    on left: 115 116, on right: 93 100 112 113
block_item_list (155)
    on left: 117 118, on right: 118 119
block_item_list_opt (156)
    on left: 119 120, on right: 90
statement (157)
    on left: 121 122 123 124 125 126, on right: 87 88 89 92 95 96 110
    111 112 113 114
designator_list (158)
    on left: 127 128, on right: 84 128
initializer_list (159)
    on left: 129 130, on right: 130 132 133 203 204
initializer (160)
    on left: 131 132 133, on right: 50 129 130
identifier_list (161)
    on left: 134 135, on right: 135 146
parameter_list (162)
    on left: 136 137, on right: 77 78 137
type_qualifier_list (163)
    on left: 138 139, on right: 139 148
direct_declarator (164)
    on left: 140 141 142 143 144 145 146 147, on right: 72 142 143
    144 145 146 147
type_qualifier_list_opt (165)
    on left: 148 149, on right: 75 76 142 143 144
pointer_opt (166)
    on left: 150 151, on right: 72
type_qualifier (167)
    on left: 152 153 154, on right: 47 65 138 139
enumerator_list (168)
    on left: 155 156, on right: 66 67 156
identifier_opt (169)
    on left: 157 158, on right: 66 67
specifier_qualifier_list_opt (170)
    on left: 159 160, on right: 64 65
storage_class_specifier (171)
    on left: 161 162 163 164, on right: 45
init_declarator_list (172)
    on left: 165 166, on right: 43 166
declaration_specifiers_opt (173)
    on left: 167 168, on right: 45 46 47 48
declaration (174)
    on left: 169, on right: 91 102 104 105 113
expression (175)
    on left: 170 171, on right: 4 30 96 110 111 114 115 171 197
assignment_expression (176)
    on left: 172 173, on right: 7 8 73 131 143 170 171 173
logical_OR_expression (177)
    on left: 174 175, on right: 29 30 175
inclusive_OR_expression (178)
    on left: 176 177, on right: 27 28 177
AND_expression (179)
    on left: 178 179, on right: 25 26 179
relational_expression (180)
    on left: 180 181 182 183 184, on right: 22 23 24 181 182 183 184
additive_expression (181)
    on left: 185 186 187, on right: 19 20 21 186 187
cast_expression (182)
    on left: 188 189, on right: 15 16 17 18 189 193
unary_expression (183)
    on left: 190 191 192 193 194 195, on right: 173 188 191 192 194
postfix_expression (184)
    on left: 196 197 198 199 200 201 202 203 204, on right: 190 197
    198 199 200 201 202
constant (185)
    on left: 205 206 207 208, on right: 2


State 0

    0 $accept: . translation_unit $end

    AUTO        shift, and go to state 1
    ENUM        shift, and go to state 2
    RESTRICT    shift, and go to state 3
    UNSIGNED    shift, and go to state 4
    EXTERN      shift, and go to state 5
    VOID        shift, and go to state 6
    FLOAT       shift, and go to state 7
    SHORT       shift, and go to state 8
    VOLATILE    shift, and go to state 9
    CHAR        shift, and go to state 10
    SIGNED      shift, and go to state 11
    CONST       shift, and go to state 12
    _BOOLEAN    shift, and go to state 13
    STATIC      shift, and go to state 14
    _COMPLEX    shift, and go to state 15
    INLINE      shift, and go to state 16
    _IMAGINARY  shift, and go to state 17
    INT         shift, and go to state 18
    DOUBLE      shift, and go to state 19
    LONG        shift, and go to state 20
    REGISTER    shift, and go to state 21

    declaration_specifiers   go to state 22
    type_specifier           go to state 23
    enum_specifier           go to state 24
    function_specifier       go to state 25
    external_declaration     go to state 26
    function_definition      go to state 27
    translation_unit         go to state 28
    type_qualifier           go to state 29
    storage_class_specifier  go to state 30
    declaration              go to state 31


State 1

  163 storage_class_specifier: AUTO .

    $default  reduce using rule 163 (storage_class_specifier)


State 2

   66 enum_specifier: ENUM . identifier_opt CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
   67               | ENUM . identifier_opt CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE
   68               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 158 (identifier_opt)

    identifier_opt  go to state 33


State 3

  153 type_qualifier: RESTRICT .

    $default  reduce using rule 153 (type_qualifier)


State 4

   59 type_specifier: UNSIGNED .

    $default  reduce using rule 59 (type_specifier)


State 5

  161 storage_class_specifier: EXTERN .

    $default  reduce using rule 161 (storage_class_specifier)


State 6

   51 type_specifier: VOID .

    $default  reduce using rule 51 (type_specifier)


State 7

   56 type_specifier: FLOAT .

    $default  reduce using rule 56 (type_specifier)


State 8

   53 type_specifier: SHORT .

    $default  reduce using rule 53 (type_specifier)


State 9

  154 type_qualifier: VOLATILE .

    $default  reduce using rule 154 (type_qualifier)


State 10

   52 type_specifier: CHAR .

    $default  reduce using rule 52 (type_specifier)


State 11

   58 type_specifier: SIGNED .

    $default  reduce using rule 58 (type_specifier)


State 12

  152 type_qualifier: CONST .

    $default  reduce using rule 152 (type_qualifier)


State 13

   60 type_specifier: _BOOLEAN .

    $default  reduce using rule 60 (type_specifier)


State 14

  162 storage_class_specifier: STATIC .

    $default  reduce using rule 162 (storage_class_specifier)


State 15

   61 type_specifier: _COMPLEX .

    $default  reduce using rule 61 (type_specifier)


State 16

   71 function_specifier: INLINE .

    $default  reduce using rule 71 (function_specifier)


State 17

   62 type_specifier: _IMAGINARY .

    $default  reduce using rule 62 (type_specifier)


State 18

   54 type_specifier: INT .

    $default  reduce using rule 54 (type_specifier)


State 19

   57 type_specifier: DOUBLE .

    $default  reduce using rule 57 (type_specifier)


State 20

   55 type_specifier: LONG .

    $default  reduce using rule 55 (type_specifier)


State 21

  164 storage_class_specifier: REGISTER .

    $default  reduce using rule 164 (storage_class_specifier)


State 22

  103 function_definition: declaration_specifiers . declarator declaration_list_opt compound_statement
  169 declaration: declaration_specifiers . init_declarator_list_opt SEMICOLON

    MUL  shift, and go to state 34

    SEMICOLON  reduce using rule 44 (init_declarator_list_opt)
    $default   reduce using rule 151 (pointer_opt)

    init_declarator_list_opt  go to state 35
    init_declarator           go to state 36
    declarator                go to state 37
    pointer                   go to state 38
    pointer_opt               go to state 39
    init_declarator_list      go to state 40


State 23

   46 declaration_specifiers: type_specifier . declaration_specifiers_opt

    AUTO        shift, and go to state 1
    ENUM        shift, and go to state 2
    RESTRICT    shift, and go to state 3
    UNSIGNED    shift, and go to state 4
    EXTERN      shift, and go to state 5
    VOID        shift, and go to state 6
    FLOAT       shift, and go to state 7
    SHORT       shift, and go to state 8
    VOLATILE    shift, and go to state 9
    CHAR        shift, and go to state 10
    SIGNED      shift, and go to state 11
    CONST       shift, and go to state 12
    _BOOLEAN    shift, and go to state 13
    STATIC      shift, and go to state 14
    _COMPLEX    shift, and go to state 15
    INLINE      shift, and go to state 16
    _IMAGINARY  shift, and go to state 17
    INT         shift, and go to state 18
    DOUBLE      shift, and go to state 19
    LONG        shift, and go to state 20
    REGISTER    shift, and go to state 21

    $default  reduce using rule 168 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    type_specifier              go to state 23
    enum_specifier              go to state 24
    function_specifier          go to state 25
    type_qualifier              go to state 29
    storage_class_specifier     go to state 30
    declaration_specifiers_opt  go to state 42


State 24

   63 type_specifier: enum_specifier .

    $default  reduce using rule 63 (type_specifier)


State 25

   48 declaration_specifiers: function_specifier . declaration_specifiers_opt

    AUTO        shift, and go to state 1
    ENUM        shift, and go to state 2
    RESTRICT    shift, and go to state 3
    UNSIGNED    shift, and go to state 4
    EXTERN      shift, and go to state 5
    VOID        shift, and go to state 6
    FLOAT       shift, and go to state 7
    SHORT       shift, and go to state 8
    VOLATILE    shift, and go to state 9
    CHAR        shift, and go to state 10
    SIGNED      shift, and go to state 11
    CONST       shift, and go to state 12
    _BOOLEAN    shift, and go to state 13
    STATIC      shift, and go to state 14
    _COMPLEX    shift, and go to state 15
    INLINE      shift, and go to state 16
    _IMAGINARY  shift, and go to state 17
    INT         shift, and go to state 18
    DOUBLE      shift, and go to state 19
    LONG        shift, and go to state 20
    REGISTER    shift, and go to state 21

    $default  reduce using rule 168 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    type_specifier              go to state 23
    enum_specifier              go to state 24
    function_specifier          go to state 25
    type_qualifier              go to state 29
    storage_class_specifier     go to state 30
    declaration_specifiers_opt  go to state 43


State 26

  108 translation_unit: external_declaration .

    $default  reduce using rule 108 (translation_unit)


State 27

  101 external_declaration: function_definition .

    $default  reduce using rule 101 (external_declaration)


State 28

    0 $accept: translation_unit . $end
  109 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 44
    AUTO        shift, and go to state 1
    ENUM        shift, and go to state 2
    RESTRICT    shift, and go to state 3
    UNSIGNED    shift, and go to state 4
    EXTERN      shift, and go to state 5
    VOID        shift, and go to state 6
    FLOAT       shift, and go to state 7
    SHORT       shift, and go to state 8
    VOLATILE    shift, and go to state 9
    CHAR        shift, and go to state 10
    SIGNED      shift, and go to state 11
    CONST       shift, and go to state 12
    _BOOLEAN    shift, and go to state 13
    STATIC      shift, and go to state 14
    _COMPLEX    shift, and go to state 15
    INLINE      shift, and go to state 16
    _IMAGINARY  shift, and go to state 17
    INT         shift, and go to state 18
    DOUBLE      shift, and go to state 19
    LONG        shift, and go to state 20
    REGISTER    shift, and go to state 21

    declaration_specifiers   go to state 22
    type_specifier           go to state 23
    enum_specifier           go to state 24
    function_specifier       go to state 25
    external_declaration     go to state 45
    function_definition      go to state 27
    type_qualifier           go to state 29
    storage_class_specifier  go to state 30
    declaration              go to state 31


State 29

   47 declaration_specifiers: type_qualifier . declaration_specifiers_opt

    AUTO        shift, and go to state 1
    ENUM        shift, and go to state 2
    RESTRICT    shift, and go to state 3
    UNSIGNED    shift, and go to state 4
    EXTERN      shift, and go to state 5
    VOID        shift, and go to state 6
    FLOAT       shift, and go to state 7
    SHORT       shift, and go to state 8
    VOLATILE    shift, and go to state 9
    CHAR        shift, and go to state 10
    SIGNED      shift, and go to state 11
    CONST       shift, and go to state 12
    _BOOLEAN    shift, and go to state 13
    STATIC      shift, and go to state 14
    _COMPLEX    shift, and go to state 15
    INLINE      shift, and go to state 16
    _IMAGINARY  shift, and go to state 17
    INT         shift, and go to state 18
    DOUBLE      shift, and go to state 19
    LONG        shift, and go to state 20
    REGISTER    shift, and go to state 21

    $default  reduce using rule 168 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    type_specifier              go to state 23
    enum_specifier              go to state 24
    function_specifier          go to state 25
    type_qualifier              go to state 29
    storage_class_specifier     go to state 30
    declaration_specifiers_opt  go to state 46


State 30

   45 declaration_specifiers: storage_class_specifier . declaration_specifiers_opt

    AUTO        shift, and go to state 1
    ENUM        shift, and go to state 2
    RESTRICT    shift, and go to state 3
    UNSIGNED    shift, and go to state 4
    EXTERN      shift, and go to state 5
    VOID        shift, and go to state 6
    FLOAT       shift, and go to state 7
    SHORT       shift, and go to state 8
    VOLATILE    shift, and go to state 9
    CHAR        shift, and go to state 10
    SIGNED      shift, and go to state 11
    CONST       shift, and go to state 12
    _BOOLEAN    shift, and go to state 13
    STATIC      shift, and go to state 14
    _COMPLEX    shift, and go to state 15
    INLINE      shift, and go to state 16
    _IMAGINARY  shift, and go to state 17
    INT         shift, and go to state 18
    DOUBLE      shift, and go to state 19
    LONG        shift, and go to state 20
    REGISTER    shift, and go to state 21

    $default  reduce using rule 168 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    type_specifier              go to state 23
    enum_specifier              go to state 24
    function_specifier          go to state 25
    type_qualifier              go to state 29
    storage_class_specifier     go to state 30
    declaration_specifiers_opt  go to state 47


State 31

  102 external_declaration: declaration .

    $default  reduce using rule 102 (external_declaration)


State 32

   68 enum_specifier: ENUM IDENTIFIER .
  157 identifier_opt: IDENTIFIER .

    CURLY_BRACKET_OPEN  reduce using rule 157 (identifier_opt)
    $default            reduce using rule 68 (enum_specifier)


State 33

   66 enum_specifier: ENUM identifier_opt . CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
   67               | ENUM identifier_opt . CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE

    CURLY_BRACKET_OPEN  shift, and go to state 48


State 34

   75 pointer: MUL . type_qualifier_list_opt
   76        | MUL . type_qualifier_list_opt pointer

    RESTRICT  shift, and go to state 3
    VOLATILE  shift, and go to state 9
    CONST     shift, and go to state 12

    $default  reduce using rule 149 (type_qualifier_list_opt)

    type_qualifier_list      go to state 49
    type_qualifier_list_opt  go to state 50
    type_qualifier           go to state 51


State 35

  169 declaration: declaration_specifiers init_declarator_list_opt . SEMICOLON

    SEMICOLON  shift, and go to state 52


State 36

  165 init_declarator_list: init_declarator .

    $default  reduce using rule 165 (init_declarator_list)


State 37

   49 init_declarator: declarator .
   50                | declarator . ASSIGN initializer
  103 function_definition: declaration_specifiers declarator . declaration_list_opt compound_statement

    AUTO        shift, and go to state 1
    ENUM        shift, and go to state 2
    RESTRICT    shift, and go to state 3
    UNSIGNED    shift, and go to state 4
    EXTERN      shift, and go to state 5
    VOID        shift, and go to state 6
    FLOAT       shift, and go to state 7
    SHORT       shift, and go to state 8
    VOLATILE    shift, and go to state 9
    CHAR        shift, and go to state 10
    SIGNED      shift, and go to state 11
    CONST       shift, and go to state 12
    _BOOLEAN    shift, and go to state 13
    STATIC      shift, and go to state 14
    _COMPLEX    shift, and go to state 15
    INLINE      shift, and go to state 16
    _IMAGINARY  shift, and go to state 17
    INT         shift, and go to state 18
    DOUBLE      shift, and go to state 19
    LONG        shift, and go to state 20
    REGISTER    shift, and go to state 21
    ASSIGN      shift, and go to state 53

    CURLY_BRACKET_OPEN  reduce using rule 107 (declaration_list_opt)
    $default            reduce using rule 49 (init_declarator)

    declaration_specifiers   go to state 54
    type_specifier           go to state 23
    enum_specifier           go to state 24
    function_specifier       go to state 25
    declaration_list         go to state 55
    declaration_list_opt     go to state 56
    type_qualifier           go to state 29
    storage_class_specifier  go to state 30
    declaration              go to state 57


State 38

  150 pointer_opt: pointer .

    $default  reduce using rule 150 (pointer_opt)


State 39

   72 declarator: pointer_opt . direct_declarator

    IDENTIFIER          shift, and go to state 58
    ROUND_BRACKET_OPEN  shift, and go to state 59

    direct_declarator  go to state 60


State 40

   43 init_declarator_list_opt: init_declarator_list .
  166 init_declarator_list: init_declarator_list . COMMA init_declarator

    COMMA  shift, and go to state 61

    $default  reduce using rule 43 (init_declarator_list_opt)


State 41

  167 declaration_specifiers_opt: declaration_specifiers .

    $default  reduce using rule 167 (declaration_specifiers_opt)


State 42

   46 declaration_specifiers: type_specifier declaration_specifiers_opt .

    $default  reduce using rule 46 (declaration_specifiers)


State 43

   48 declaration_specifiers: function_specifier declaration_specifiers_opt .

    $default  reduce using rule 48 (declaration_specifiers)


State 44

    0 $accept: translation_unit $end .

    $default  accept


State 45

  109 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 109 (translation_unit)


State 46

   47 declaration_specifiers: type_qualifier declaration_specifiers_opt .

    $default  reduce using rule 47 (declaration_specifiers)


State 47

   45 declaration_specifiers: storage_class_specifier declaration_specifiers_opt .

    $default  reduce using rule 45 (declaration_specifiers)


State 48

   66 enum_specifier: ENUM identifier_opt CURLY_BRACKET_OPEN . enumerator_list CURLY_BRACKET_CLOSE
   67               | ENUM identifier_opt CURLY_BRACKET_OPEN . enumerator_list COMMA CURLY_BRACKET_CLOSE

    IDENTIFIER  shift, and go to state 62
